# task_manager

./: CMakeLists.txt  Cargo.toml  ReadMe.md  package.xml  visualize.sh
launch/: task_manager.launch  test_flew_into_hole_detection.launch  test_fly_into_hole.launch
msg/: DroneStatus.msg
src/: common_ros_utils.rs  events.rs  geometry.rs  lib.rs  main.rs  msgs.rs  rviz.rs  service_clients.rs  task_manager.rs  topic_publishers.rs  topic_subscribers.rs
src/task1/: commands.rs  drone_state.rs  events.rs  transitions.rs
src/task2/: drone_state.rs  events.rs  transitions.rs
src/task3/: drone_state.rs  events.rs  transitions.rs
srv/: Start.srv
