[package]
name = "task_manager"
version = "0.1.0"
authors = ["Kirill Pogartsev <kirill.pogartsev@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = { git = "https://github.com/adnanademovic/rosrust", default-features = false }
rosrust_actionlib = { git = "https://github.com/adnanademovic/rosrust", default-features = false }
env_logger = "0.7.1"
machine = "0.3"
serde = "1.0"
lazy_static = "1.4.0"
nalgebra = "0.29.0"
