<?xml version="1.0"?>
<package format="2">
    <name>task_manager</name>
    <version>0.0.0</version>
    <description>The task_manager package</description>
    <maintainer email="kirill.pogartsev@ya.ru">Kirill Pogartsev</maintainer>
    <maintainer email="tamerlan.baxov@mail.ru">Tamerlan Bahov</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>pos_collector_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>detection_msgs</build_depend>
    <build_depend>pos_collector_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>fast_planner_server</build_depend>
    <build_depend>transform_services</build_depend>
    <build_depend>motion_controller</build_depend>
    <build_depend>autotakeoff</build_depend>
    <build_depend>nodes_monitor_msgs</build_depend>
    <build_depend>plan_env</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>qr_detector_msgs</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
